WebSocketサーバ周りを作成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">StreamSupporter</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">音声認識</string>
+    <string name="tab_text_2">効果音</string>
+    <string name="tab_text_3">ネット</string>
+    <string name="tab_text_4">設定</string>
+    <string name="tab_text_5">ログ</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
